--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodingInnovator - Slider Pro</title>
+    <!--Icon -->
     <link rel="icon" href="./assets/img/coding-innovator.jpeg">
+    <!-- Style -->
+    <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 
 <body>
